--- a/Ruby-Proyect/app/assets/stylesheets/application.css
+++ b/Ruby-Proyect/app/assets/stylesheets/application.css
@@ -1026,7 +1026,7 @@ input:focus{outline: none;}
     background-color: #FF936B;
 }
 
-.boton-pedir-ahora{
+.btn-comprar-ahora{
     border-radius: 20px;
     background-color: #FF936B;
 }
