--- a/Ruby-Proyect/app/views/pages/_menu.html.erb
+++ b/Ruby-Proyect/app/views/pages/_menu.html.erb
@@ -20,7 +20,7 @@
                   <%= hidden_field_tag :producto_id, producto.id %>
                   <%= submit_tag "Mandar al carrito", class: "boton-mandar-carrito"%>
                 <% end %>
-                <button class = "boton-pedir-ahora" data-producto-id="<%=producto.id %>">Comprar ahora</button>
+               <%= link_to "Comprar ahora", formulario_path(producto_id: producto.id), class: 'btn-comprar-ahora' %>
               </div>
             <% end %>
           </div>
@@ -36,25 +36,3 @@
     <h2>No hay productos disponibles por ahora.</h2>
   </div>
 <% end %>
-
-<div id="formulario-pedido" style= "display: none;">
-  <h3>Datos para la toma de pedido.</h3>
-  <form action="/pedidos/crear" method="post">
-    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-    <input type="hidden" name="producto_id" id="producto_id">
-
-    <label>Nombre:</label>
-    <input type= "text" name= "nombre" required><br>
-
-    <label>Apellido:</label>
-    <input type= "text" name="apellido" required><br>
-
-    <label>Dirección</label>
-    <input type="text" name="direccion" required><br>
-
-    <label>Telefono</label>
-    <input type= "text" name="telefono" required><br>
-
-    <button type="submit">Confirmar Pedido</button>
-  </form>    
-</div>  
