--- a/Ruby-Proyect/app/assets/stylesheets/application.css
+++ b/Ruby-Proyect/app/assets/stylesheets/application.css
@@ -21,19 +21,32 @@ input:focus{outline: none;}
 
 /* Inisio de Sesión */
 
-.login, .registro, .contraseñaRecuperacion, .cambioContraseña{
+.login-background {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
     min-height: 100dvh;
-    align-items: center;
     background: linear-gradient(70deg, var(--base-claro),var(--base),var(--base-oscuro));
 }
 
+.left-side, .right-side{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.right-side{background-color: white;padding: 20px;}
+
 .session-header{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 20px;
     margin: 30px 0;
 }
 
@@ -51,8 +64,6 @@ input:focus{outline: none;}
     flex-direction: column;
     padding: 18px;
     border-radius: 8px;
-    background-color: var(--base-claro);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     width: 400px;
 }
@@ -92,7 +103,7 @@ input:focus{outline: none;}
 }
 
 .session-form a{
-    color: white;
+    color: black;
     font-weight: bold;
     text-decoration: none;
     margin: 6px 0;
@@ -211,8 +222,9 @@ input:focus{outline: none;}
 }
 
 .user{
-    gap: 15px;
+    gap: 12px;
     display: flex;
+    overflow: visible;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -220,18 +232,21 @@ input:focus{outline: none;}
 
 
 .user a{
-    color: white;
-    text-decoration: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--base-claro);
+    box-shadow: 0px 0px 10px rgba(157, 46, 6, 0.3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .user img{
-    color: white;
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    padding: 2px;
-    border: 2px solid var(--negro);
+    width: 22px;
+    height: 22px;
 }
+
 
 .btn-user{
     text-decoration: none;
