--- a/Ruby-Proyect/app/views/devise/passwords/new.html.erb
+++ b/Ruby-Proyect/app/views/devise/passwords/new.html.erb
@@ -1,39 +1,45 @@
-<section class="contraseñaRecuperacion">
-  <div class="session-header">
-    <h1>Bitevia Software</h1>
-    <%= image_tag "LogoLogo.svg" %>
-  </div>  
-
-  <div class="session-form">
-    <h2>¿ Olvidaste tu contraseña ?</h2>
-
-    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
-
-      <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<section class="login-background">
+  <div class="left-side">
+    <div class="session-header">
+      <%= image_tag "LogoLogo.svg" %>
+      <h1>Bitevia Software</h1>
+    </div>  
+    <footer class="session-footer">
+      <div class="social">
+        <a href="https://www.instagram.com/laterrazadelpri?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+          <%= image_tag "icons/instagram-brands.svg" %>
+        </a>
+        <a href="https://wa.me/573113678033" target="_blank">
+          <%= image_tag "icons/whatsapp-brands.svg" %>
+        </a>
+        <a href="https://www.tiktok.com/@laterrazadelpri?is_from_webapp=1&sender_device=pc" target="_blank">
+          <%= image_tag "icons/tiktok-brands.svg" %>
+        </a>
       </div>
-
-      <div class="actions">
-        <%= f.submit "Restablecer la contraseña" %>
-      </div>
-    <% end %>
-
-    <%= render "devise/shared/links" %>
+      <p>© 2023 La Terraza del Pri. Todos los derechos reservados.</p>
+    </footer>
   </div>
-  <div class="session-footer">
-    <div class="social">
-      <a href="https://www.instagram.com/laterrazadelpri?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
-        <%= image_tag "icons/instagram-brands.svg" %>
-      </a>
-      <a href="https://wa.me/573113678033" target="_blank">
-        <%= image_tag "icons/whatsapp-brands.svg" %>
-      </a>
-      <a href="https://www.tiktok.com/@laterrazadelpri?is_from_webapp=1&sender_device=pc" target="_blank">
-        <%= image_tag "icons/tiktok-brands.svg" %>
-      </a>
-    </div>
-    <p>© 2023 La Terraza del Pri. Todos los derechos reservados.</p>
+
+  <div class="right-side">
+    <div class="session-form">
+      <h2>¿ Olvidaste tu contraseña ?</h2>
+
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+
+        <div class="field">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "Restablecer la contraseña" %>
+        </div>
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+    </div>  
   </div>
+  
+
 </section>
