--- a/Ruby-Proyect/app/views/devise/registrations/new.html.erb
+++ b/Ruby-Proyect/app/views/devise/registrations/new.html.erb
@@ -1,67 +1,72 @@
-<section class="registro">
-  <header class="session-header">
-    <h1>Bitevia Software</h1>
-    <%= image_tag "LogoLogo.svg" %>
-  </header>
-  <div class="session-form">
-    <h2>Regístrate</h2>
-    
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
-
-      <div class="field">
-        <%= f.label :nombre %>
-        <%= f.text_field :nombre %>
+<section class="login-background">
+  <div class="left-side">
+    <header class="session-header">
+      <%= image_tag "LogoLogo.svg" %>
+      <h1>Bitevia Software</h1>
+    </header>
+    <footer class="session-footer">
+      <div class="social">
+        <a href="#">
+          <%= image_tag "icons/instagram-brands.svg" %>
+        </a>
+        <a href="#">
+          <%= image_tag "icons/whatsapp-brands.svg" %>
+        </a>
+        <a href="#">
+          <%= image_tag "icons/tiktok-brands.svg" %>
+        </a>
       </div>
-
-      <div class="field">
-        <%= f.label :apellido %>
-        <%= f.text_field :apellido %>
-      </div>
-
-      <div class="field">
-        <%= f.label :telefono %>
-        <%= f.text_field :telefono %>
-      </div>
-
-      <div class="field">
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-      </div>
-
-      <div class="field" id="psswrd">
-        <%= f.label :password , class: "psswrd" %>
-        <% if @minimum_password_length %>
-        <em>(minimo <%= @minimum_password_length %> caracteres)</em>
-        <% end %>
-        <%= f.password_field :password, autocomplete: "new-password" %>
-      </div>
-
-      <div class="field">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-      </div>
-
-      <div class="actions">
-        <%= f.submit "Registrar"%>
-      </div>
-    <% end %>
-
-    <p>¿Ya tienes cuanta? <br> <%= link_to "Inicia sesion", new_session_path(resource_name) %></p>
-
+      <p>© 2025 Bitevia Software. Todos los derechos reservados.</p>
+    </footer>
   </div>
-  <footer class="session-footer">
-    <div class="social">
-      <a href="#">
-        <%= image_tag "icons/instagram-brands.svg" %>
-      </a>
-      <a href="#">
-        <%= image_tag "icons/whatsapp-brands.svg" %>
-      </a>
-      <a href="#">
-        <%= image_tag "icons/tiktok-brands.svg" %>
-      </a>
+  <div class="right-side">
+    
+    <div class="session-form">
+      <h2>Regístrate</h2>
+      
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+
+        <div class="field">
+          <%= f.label :nombre %>
+          <%= f.text_field :nombre %>
+        </div>
+
+        <div class="field">
+          <%= f.label :apellido %>
+          <%= f.text_field :apellido %>
+        </div>
+
+        <div class="field">
+          <%= f.label :telefono %>
+          <%= f.text_field :telefono %>
+        </div>
+
+        <div class="field">
+          <%= f.label :email %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        </div>
+
+        <div class="field" id="psswrd">
+          <%= f.label :password , class: "psswrd" %>
+          <% if @minimum_password_length %>
+          <em>(minimo <%= @minimum_password_length %> caracteres)</em>
+          <% end %>
+          <%= f.password_field :password, autocomplete: "new-password" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "Registrar"%>
+        </div>
+      <% end %>
+
+      <p>¿Ya tienes cuanta? <br> <%= link_to "Inicia sesion", new_session_path(resource_name) %></p>
     </div>
-    <p>© 2025 Bitevia Software. Todos los derechos reservados.</p>
-  </footer>
+  </div>
+  
 </section>
