--- a/Ruby-Proyect/app/views/pages/index.html.erb
+++ b/Ruby-Proyect/app/views/pages/index.html.erb
@@ -17,7 +17,6 @@
 
         <%= link_to "Inicio", root_path %>
         <%= link_to "Menú", menu_path %>
-        <%= link_to "Carrito", carrito_path %>
         
         <% if current_user %>
             <% if current_user.admin? %>
@@ -28,16 +27,17 @@
    
     <% if current_user %>
         <div class="user">
-            <%= link_to edit_path do %>
-                <%= image_tag "icons/user-solid.svg", alt: "Perfil" %>
-            <% end %>
+            <%= link_to image_tag("icons/user-solid.svg", alt: "Perfil"), edit_path%>
+            <%= link_to image_tag("icons/cart-shopping-solid.svg", alt: "Carrito"), carrito_path %>
             <div class="btn-user">
                 <%= button_to "Cerrar sesión", destroy_user_session_path, method: :delete, form: { "data-turbo-confirm": "¿Estás seguro que quieres cerrar sesión?" } %>
             </div>
         </div>
     <% else %>
         <div class="user">
+            <%= link_to image_tag("icons/cart-shopping-solid.svg", alt: "Carrito", class: "carro"), carrito_path %>
             <div class="btn-user">
+
             <%= button_to "Iniciar Sesión", new_user_session_path %>
             </div>
         </div>
