--- a/Ruby-Proyect/app/views/pages/_formulario.html.erb
+++ b/Ruby-Proyect/app/views/pages/_formulario.html.erb
@@ -1,28 +1,20 @@
-<h2 class ="titulo-confirmacion-compra">Confirmación de la compra.</h2> 
-    <!-- Datos de la persona -->
+<div class = "section-carrito">
+  <h1 class = "detalle-compra">Detalles de la compra</h1>
 
-<div class ="informacion-compra" > 
-  <label>Nombre:</label>
-  <input type= "text" name= "nombre" required><br>
+  <h3 class ="name-cart">Datos del Cliente</h3>
+  <ul>
+    <li><strong>Nombre:</strong> <%= @usuario.nombre %> <%= @usuario.apellido %></li>
+    <li><strong>Teléfono:</strong> <%= @usuario.telefono %></li>
+  </ul>
 
-  <label>Apellido:</label>
-  <input type= "text" name="apellido" required><br>
+  <h3 class ="name-cart" >Producto a Comprar</h3>
+  <ul>
+    <li><strong>Producto:</strong> <%= @producto.nombre %></li>
+    <li><strong>Precio:</strong> $<%= @producto.precio %></li>
+    <li><strong>Cantidad:</strong> 1</li>
+    <li class="cart-total" ><strong>Total:</strong> $<%= @producto.precio %></li>
+  </ul>
 
-  <label>Dirección:</label>
-  <input type="text" name="direccion" required><br>
-
-  <label>Telefono:</label>
-  <input type= "text" name="telefono" required><br>
-
-  <p>Producto: <%= @producto.nombre %></p>
-  <%= image_tag "LogoLogoText2.svg", class: "product-thumbnail" %>
-  <p>Precio: <%= number_to_currency(@producto.precio) %></p>
-
-  <%= form_with url: formulario_path, method: :post do %>
-    <%= hidden_field_tag :producto_id, @producto.id %>
-    <%= submit_tag "Confirmar compra", class: "btn btn-primary" %>
-  <% end %>
-
+   <button class="order-button">Pagar</button>
+  </div>
 </div>
-
-    
